# django-store

./: .gitignore  README  input.css  load_fixtures.py  package-lock.json  package.json  pyproject.toml  requimentes.txt  seeding_data.py  tailwind.config.js  translations.py
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_cartitem.py
core/: admin.py  urls.py  views.py
fixtures/: brands.json  categories.json  order_items.json  orders.json  products.json  profiles.json  reviews.json  tags.json  users.json  wishlists.json
orders/: models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_payment_method_alter_order_payment_status.py
products/: admin.py  context_processors.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_tag_product_sku_product_stock_product_type_and_more.py  0003_product_img_link.py  0004_category_image.py
shop/: settings.py  urls.py
static/css/: output.css
static/js/: alpine.js
templates/: about.html  base.html  home.html
templates/cart/: cart_detail.html
templates/categories/: category_detail.html  category_list.html
templates/components/: navbar.html
templates/cotton/: badge.html  button.html  card.html  input.html
templates/includes/: footer.html  navbar.html
templates/orders/: checkout.html  order_confirmation.html  order_detail.html  order_list.html
templates/pages/: about.html  home.html  products.html
templates/products/: product_detail.html  product_list.html
users/: admin.py  models.py  tests.py  urls.py  views.py
(+39 files in other folders)
