[project]
name = "smart-s3r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-browser-reload>=1.21.0",
    "django-cotton==2.6.2",
    "django-hugeicons-stroke>=1.1.2",
    "django-jazzmin==3.0.4",
    "django-triggers>=2.1.5",
    "pillow>=12.1.1",
]
